# Ember

./: .gitignore  CMakeLists.txt  README.md  build_shaders.sh
cmake/: CompileShaders.cmake
examples/: aabb.cpp  basic.cpp  build_shaders.sh  instanced.cpp  light.cpp  multi_window.cpp  physics.cpp  physics.hpp  rocket.cpp  run.sh  run_example.sh  shared.hpp  sun.cpp
examples/shaders/: brick_outline.frag  cube_outline.frag  instanced.frag  instanced.vert
include/: camera.hpp  color.hpp  default_materials.hpp  device.hpp  material.hpp  math.hpp  mesh.hpp  renderer.hpp  shapes.hpp  types.hpp  utils.hpp  window.hpp
include/ember/: camera.hpp  color.hpp  default_materials.hpp  device.hpp  material.hpp  math.hpp  mesh.hpp  physics.hpp  renderer.hpp  shapes.hpp  transform.hpp  types.hpp  window.hpp
include/etna/: camera.hpp  color.hpp  configs.hpp  default_materials.hpp  default_primitives.hpp  engine.hpp  etna_core.hpp  forward_renderer.hpp  light.hpp  material.hpp  math.hpp  mesh.hpp  model.hpp  primitives.hpp  render_target.hpp  renderer.hpp  scene.hpp  scene_graph.hpp  transform.hpp  window.hpp
scripts/: bootstrap.sh
shaders/: brick_outline.frag  camera.glsl  default.frag  default.vert  ember.glsl  etna.glsl  floor.frag  floor.vert  fragment.frag  fragment.spv  grid.frag  scene.glsl  vertex.spv  vertex.vert
shaders/ember/: default.frag  default.vert  grid.frag
src/: camera.cpp  default_materials.cpp  default_primitives.cpp  device.cpp  engine.cpp  forward_renderer.cpp  incbin.h  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  primitives.cpp  render_target.cpp  renderer.cpp  scene.cpp  scene_graph.cpp  window.cpp
